--- a/public/.htaccess
+++ b/public/.htaccess
@@ -46,3 +46,5 @@ Options All -Indexes
 # Disable server signature start
     ServerSignature Off
 # Disable server signature end
+
+Header append X-Frame-Options: "SAMEORIGIN"
